# Solar_Tracking_System

./: CMakeLists.txt  README.md
.github/: copilot-instructions.md
Backup_files/: Backup.c  Backup2.c  Backup3.c  Backup4.c  Backup_Test.c  For_Packing.c  Steady_Version_V1.1.c  Steady_Version_V1.c  c_cpp_properties copy.json  sdkconfig_backup  settings copy.json  stepper_motor_backup.c  stepper_motor_backup.h  tasks copy.json  test.c
Past_Version/Solar_Panel_Tracking_Arduino_Version/: API_Test.py  Wifi data source.txt  platformio.ini
Solidworks/: Motor_Base.DXF  Motor_Base.SLDPRT  Motor_Base_1.DXF  Motor_Base_1.SLDPRT  Motor_Base_2.DXF  Motor_Base_2.SLDPRT  Motor_Base_Assemb.SLDASM  Motor_Base_Support.DXF  Motor_Base_Support.SLDPRT  Motor_Rotate_Support_1.DXF  Motor_Rotate_Support_1.SLDPRT  Motor_Rotate_Support_2.DWG  Motor_Rotate_Support_2.DXF  Motor_Rotate_Support_2.SLDPRT  Motor_Support_Assem.SLDASM  Servo_Base_1.DXF  Servo_Base_1.SLDPRT  Servo_Base_2.DXF  Servo_Base_2.SLDPRT  Servo_Box_Assem.SLDASM  Servo_Box_Button_Top.DXF  Servo_Box_Button_Top.SLDPRT  Servo_Box_Front_Back.DXF  Servo_Box_Front_Back.SLDPRT  Servo_Box_Side.DXF  Servo_Box_Side.SLDPRT  Solar_Support_1.DXF  Solar_Support_1.SLDPRT  Solar_Support_2.DXF  Solar_Support_2.SLDPRT  Solar_Support_3.DXF  Solar_Support_3.SLDPRT  Solar_Support_4.DXF  Solar_Support_4.SLDPRT  Solar_Support_5.DXF  Solar_Support_5.SLDPRT  Solar_Support_Assem.SLDASM
components/stepper_motor/: CMakeLists.txt  stepper_motor.c  stepper_motor.h
main/: CMakeLists.txt  main.c
(+1 files in other folders)
